--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@openzeppelin/contracts-upgradeable": "^5.4.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.1",
     "@remix-project/remixd": "^0.6.30",
+    "dotenv": "^17.2.2",
     "hardhat-deploy": "^1.0.4",
     "mocha": "^11.7.2"
   }
